--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
         <!--   需要分布式session的话需要放开注释
         <dependency>
             <groupId>org.springframework.session</groupId>
