--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -108,7 +108,7 @@ spring:
       filters: log4j,wall,mergeStat
 
 logging:
-  level.root: warn
+  level.root: info
   path: logs/
   file: guns.log
 
